<resources>

    <!-- NON-TRANSLATABLE-->
    <string name="interstitial_admob" translatable="false">ca-app-pub-3665001246595939/6617121575</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3665001246595939~5117457208</string>
    <string name="all_rights_reserved" translatable="false">© 2022 Rocklion Software All Rights Reserved</string>

    <string name="arabic_ya_allah" translatable="false">الله</string>
    <string name="arabic_lailaheillallah" translatable="false">لَا اِلَهَ اِلَّا اللهْ مُحَمَّدُ الرَّسُولُ</string>
    <string name="arabic_subhanallah" translatable="false">سبحان الله</string>
    <string name="arabic_alhamdullilah" translatable="false">ٱلْحَمْدُ لِلَّٰهِ</string>
    <string name="arabic_allahuekber" translatable="false">الله أكبر</string>
    <string name="arabic_salawat" translatable="false">اللَّهُمَّ صَلِّ عَلَى سيّدنا مُحَمَّدٍ، وَعَلَى آلِ سيّدنا مُحَمَّدٍٍ</string>
    <string name="arabic_subhanallahi_vebihamdihi" translatable="false">سُبْحَانَ اللَّهِ وَبِحَمْدِهِ، سُبْحَانَ اللَّهِ العَظِيمٍٍ</string>
    <string name="arabic_lahavle" translatable="false">لَا حَوْلَ وَلَا قُوَّةَ اِلَّا بااللّٰهِ</string>
    <string name="arabic_hasbunallahu" translatable="false">حَسْبُنَا اللَّهُ وَنِعْمَ الْوَكِيلٍٍُ</string>
    <string name="arabic_lailahe" translatable="false">لاَ إِلهَ إِِلاَّ أَنْتَ سُبْحَانَكَ إِِنِّي كُنْتُ مِنَ الظَّالِمِينَ</string>
    <string name="arabic_subhanallahi_velhamdulillahi" translatable="false">سُبْحَانَ اللَّهِ وَالْحَمْدُ لِلَّهِ وَلاَ إِلَهَ إِلاَّ اللَّهُ وَاللَّهُ أَكْبَرُ وَلاَ حَوْلَ وَلاَ قُوَّةَ إِلاَّ بِاللَّ</string>


    <!-- NON-TRANSLATABLE -->


    <string name="app_name">Adhkar : Dhikr and Voice</string>
    <string name="weeklyNotificationSuffix">The most beneficial dhikr is the regular one.</string>
    <string name="last_ads_info">You have viewed the last ad. You will not see any more ads in this session.</string>


    <string name="name_ya_allah">Allah</string>
    <string name="explanation_ya_allah">The Almighty Lord of All Worlds</string>
    <string name="body_ya_allah">Allah is Al-Ism Al-A\'zam, the Greatest name which contains all the divine attributes and is the sign of the essence and cause of all existence. Allah does not resemble in any way any of His creation. Allah is Allah\'s name only. Nothing else can assume this name or share it.</string>


    <string name="name_lailaheillallah">La Ilaha Illallah</string>
    <string name="explanation_lailaheillallah">There is no God but Allah.</string>
    <string name="body_lailaheillallah">Sayyiduna Abu Hurayrah (radiyallahu ‘anhu) once asked Nabi (sallallahu ‘alayhi wa sallam), “Who will be the fortunate person to gain your intercession on the day of Qiyamah?”Rasulullah (sallallahu ‘alayhi wa sallam)said:“O Abu Hurayrah, I knew you would be the first to ask me about this due to your eagerness for Hadith. The fortunate person who will gain my intercession will be that person who says ‘La ilaha illallah\' sincerely from his heart.”(Sahih Bukhari, Hadith: 99)</string>


    <string name="name_subhanallah">Subhanallah</string>
    <string name="explanation_subhanallah">Allah is free from imperfection.</string>
    <string name="body_subhanallah">Saying "Subhanallah" fills half of the scale. Saying Alhamdulillah fills the scales. There is no veil between a person who says, "There is no true god but Allah, there is only Him," and Allah. Until he is with her in heaven…” \n(Tirmidhi, Daavat, 87)"))</string>


    <string name="name_alhamdullilah">Alhamdullilah</string>
    <string name="explanation_alhamdullilah">All Praise is for Allah.</string>
    <string name="body_alhamdullilah">Strange are the ways of a believer for there is good in every affair of his and this is not the case with anyone else except in the case of a believer for if he has an occasion to feel delight, he thanks Allah, thus there is a good for him in it, and if he gets into trouble and shows resignation (endures into patiently), there is good for him in it. [Sahih Muslim]</string>


    <string name="name_allahuekber">Allahu ekber</string>
    <string name="explanation_allahuekber">Allah is the Greatest.</string>
    <string name="body_allahuekber">Abu Hurairah (May Allah be pleased with him) reported: \n The Messenger of Allah said, He who recites after every prayer: Subhan-Allah (Allah is free from imperfection) thirty-three times; Al-hamdu lillah (praise be to Allah) thirty-three times; Allahu Akbar (Allah is Greatest) thirty-three times; and completes the hundred with: La ilaha illallahu, wahdahu la sharika lahu, lahul-mulku wa lahul-hamdu, wa Huwa \'ala kulli shai\'in Qadir (there is no true god except Allah. He is One and He has no partner with Him. His is the sovereignty and His is the praise, and He is Omnipotent), will have all his sins pardoned even if they may be as large as the foam on the surface of the sea. [Muslim]. Reference: Book 16, Hadith 12 Arabic/English book reference : Book 16, Hadith 1419</string>


    <string name="name_salawat">Allahumma salli ala sayyidina Muhammadin and ala ali sayyidina Muhammad.</string>
    <string name="explanation_salawat">O\' Allah (SWT), send your mercy on the Prophet (PBUH) and his family.</string>
    <string name="body_salawat">The Prophet (PBUH) said Those closest to me will be those who send the most blessings on me. If you send blessings on me, Allah (swt) will send blessings on you. Bring me salawat. Wherever you are, your prays always reach to me.</string>


    <string name="name_subhanallahi_vebihamdihi">subhanallahi wa bihamdihi subhanallahil azeem</string>
    <string name="explanation_subhanallahi_vebihamdihi">Glory be to Allah and all praise is due to him, glory be to Allah the great.</string>
    <string name="body_subhanallahi_vebihamdihi">The Messenger of Allah (ﷺ) said to me, “Shall I tell you the expression that is most loved by Allah?” It is ‘Subhan-Allahi wa bihamdihi\' (Allah is free from imperfection and His is the praise)\'.”[Muslim]</string>


    <string name="name_lahavle">La Hawla Wala Quwwata Illa Billah</string>
    <string name="explanation_lahavle">There is no power nor strength except Allah</string>
    <string name="body_lahavle">Hazrat Abu Huraira (RA) narrated that Prophet Hazrat Mohammad (ﷺ) said La Hawla Wala Quwwata Illa Billah is the cure of 99 diseases from which the smallest degree of disease is distress and sadness.</string>


    <string name="name_hasbunallahu">Hasbunallahu Wa Ni’mal Wakeel</string>
    <string name="explanation_hasbunallahu">Sufficient for us is Allah, and [He is] the best Disposer of affairs.</string>
    <string name="body_hasbunallahu">Abu Sa’id Al-Khudri Radi ALLAHu ‘Anhu reported:\nMessenger of ALLAH ﷺ said, “How can I feel at ease when the Angel of the Trumpet, (Israfeel) has put his lips to the Trumpet and is waiting for the order to blow it”. He ﷺ perceived as if this had shocked his Companions, so he ﷺ told them to seek comfort through reciting: ‘HasbunALLAH Wani’mal Wakeel [ALLAH (Alone) is Sufficient for us, and He is the Best Disposer of affairs (for us)]”.\nJam’i At-Tirmidhi | Book 1, Hadith 409</string>


    <string name="name_lailahe">La ilaaha illa Anta, subhaanaka inni kuntu min al-zaalimeen</string>
    <string name="explanation_lailahe">(O ALLAH!) There are none worthy of worship besides You. Glory be to You. Verily, I have been of the wrongdoers.</string>
    <string name="body_lailahe">Sayyidatina Aishah r.a reported:\nWhoever recites a letter from Allah\'s Book, then he receives the reward from it, and the reward of ten the like of it. I do not say that Alif Lam Mim is a letter, but Alif is a letter, Lam is a letter and Mim is a letter\n(Sunan At-Tirmizi)</string>


    <string name="name_subhanallahi_velhamdulillahi">SubhanAllah Walhamdulillah wala Ilaha Illallah Wallaahu Akbar</string>
    <string name="explanation_subhanallahi_velhamdulillahi">Glory be to Allah, praise be to Allah, there is no god except Allah, and Allah is Most Great</string>
    <string name="body_subhanallahi_velhamdulillahi">The Prophet (ﷺ) said: “When I say ‘SubhanAllah Walhamdulillah wala Ilaha Illallah Wallaahu Akbar (Glory be to Allah, praise be to Allah, there is no god except Allah, and Allah is Most Great)’, this is more beloved to me than all that the sun rises upon.” (Narrated by Muslim). These words are the most beloved words to Allah, the best of words, and they weigh heavily in the balance of good deeds, as was narrated in the saheeh ahaadeeth.</string>


    <string name="button_start">Start</string>
    <string name="sound_off">Sound Off!</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_restart">Reset Dhikr</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="noreset">Dhikr has not been reset</string>
    <string name="reset">Dhikr has been reset</string>
    <string name="reset_header">Reset</string>
    <string name="reset_question">Are you sure you want to reset the vird count?</string>
    <string name="last_dhikr">\nLast Dhikr</string>
    <string name="this_week_dhikr">This Week\nDhikr</string>
    <string name="this_month_dhikr">This Month\nDhikr</string>
    <string name="total_dhikr">"Total Dhikr  :  "</string>
    <string name="month_dhikr">"Month Dhikr  :  "</string>
    <string name="all_dhikrs">All Dhikrs</string>


</resources>